updated game core version

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def game333(number):\n",
+    "def game333_v2(number):\n",
     "    count = 0\n",
     "    predict = np.random.randint(1,100)\n",
     "    max_value = 100\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +68,13 @@
        "5"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score_game(game333)"
+    "score_game(game333_v2)"
    ]
   }
  ],
